# text-classification-example

./: .gitignore  LICENSE  Makefile  PIPELINE.md  README.md  dvc.yaml  params.yaml  pyproject.toml
text_classification_example/: download_dataset.py  prepare_dataset.py
text_classification_example/utils/: __init__.py
