[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "text_classification_example"
version = "0.0.1"
description = "text classificatoin example"
authors = [
  { name = "u-masao" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "datasets>=4.0.0",
    "loguru>=0.7.3",
    "mlflow>=3.1.4",
    "object-cache>=0.1.6",
    "ollama>=0.5.1",
    "psutil>=7.0.0",
    "pynvml>=12.0.0",
    "pyrsmi>=0.2.0",
    "transformers>=4.54.1",
    "typed-argument-parser>=1.10.1",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["text_classification_example"]
include = ["pyproject.toml", "text_classification_example/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["text_classification_example"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "dvc>=3.61.0",
    "ruff>=0.12.7",
]

